# StaR

./: .gitignore  Cargo.toml  LICENSE  README.md  asdf  mygraph.txt  test.txt
.github/workflows/: ci-cd.yaml
src/: cli.rs  graph.pg  lib.rs
src/algorithms/: bfs.rs  dfs.rs  elias_code.rs  graph_coarsening.rs  mod.rs
src/data_structures/: bitvec.rs  choice_dict.rs  choice_dictionary.rs  choicedict.rs  graph.rs  init_array.rs  mod.rs  subgraph.rs
src/graph_parser/: parser.rs
src/tools/: graph_visualizer.rs  mod.rs  test_kahip.rs
tests/graph-generator/: README.md  pyproject.toml
tests/graph-generator/graph_generator/: graph-generator.py
