[tool.poetry]
name = "graph-generator"
version = "0.1.0"
description = ""
authors = ["“Maximilian <“52167836+maxivhuber@users.noreply.github.com”>"]
readme = "README.md"
packages = [{include = "graph_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tqdm = "^4.64.1"
pandas = "^1.5.2"
networkx = "^2.8.8"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
